--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,32 +2,28 @@
 import Container from "@components/Container.astro";
 import Link from "@components/Link.astro";
 import { SITE } from "@consts";
+import ButtonCV from "./ButtonCV.astro";
 ---
 
 <header>
   <Container>
-    <div class="flex flex-wrap gap-y-2 justify-between">
+    <div class="flex flex-wrap gap-y-2 justify-between items-center">
       <Link href="/" underline={false}>
         <div class="font-semibold">
           {SITE.NAME}
         </div>
       </Link>
-      <nav class="flex gap-1">
-        <Link href="/blog">
-          blog
-        </Link>
+      <nav class="flex gap-1 items-center">
+        <Link href="/blog"> blog </Link>
         <span>
           {`/`}
         </span>
-        <Link href="/work">
-          work
-        </Link>
+        <Link href="/work"> work </Link>
         <span>
           {`/`}
         </span>
-        <Link href="/projects">
-          projects
-        </Link>
+        <Link href="/projects"> projects </Link>
+        <ButtonCV class="ml-4" />
       </nav>
     </div>
   </Container>
