--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const work = await Promise.all(
   <Container>
     <div class="flex flex-col items-center justify-center">
       <img
-        src="/images/yo.jpg"
+        src="/yo.jpg"
         alt="Es una foto en la que aparezco yo :)"
         class="w-48 h-48 rounded-full"
       />
