Changed spanish cv to english cv

--- a/src/components/ButtonCV.astro
+++ b/src/components/ButtonCV.astro
@@ -5,8 +5,10 @@ interface Props {
   class?: string;
 }
 
-const { href = "https://cvdesignr.com/p/686266c6f2e32", class: className } =
-  Astro.props;
+const {
+  href = "https://cvdesignr.com/p/686834ce06d48?hl=es_ES",
+  class: className,
+} = Astro.props;
 ---
 
 <a
